# raytracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.json  grammar.json  histogram.cpp  histogram.hh  image.cpp  image.hh  image_io.cpp  image_io.hh  main.cc
core/: camera.cc  color.cc  grammar.cc  image.cc  light.cc  ray.cc  scene.cc  texture-material.cc  turtle.cc  uniform-texture.cc
core/include/: camera.hh  color.hh  grammar.hh  image.hh  light.hh  ray.hh  scene-object.hh  scene.hh  texture-material.hh  turtle.hh  uniform-texture.hh
grammars/: big_plant.json  cool_plant.json  little_plant.json  square_snake.json
graphics/: box.cc  mengen-sponge.cc  mengen_sponge.cc  plane.cc  sphere.cc  triangle.cc  uniform-texture.cc
graphics/include/: blob.hh  box.hh  mengen-sponge.hh  mengen_sponge.hh  plane.hh  point-light.hh  sphere.hh  triangle.hh  uniform-texture.hh
math/: point3.cc  utils.cc  vector3.cc
math/include/: point3.hh  utils.hh  vector3.hh
